[gd_scene load_steps=6 format=3 uid="uid://s32d1ahqoaj4"]

[ext_resource type="Theme" uid="uid://b6ou4s4eaow2o" path="res://UI/Themes/woody/woody_list_element.tres" id="1_2r2sa"]
[ext_resource type="Script" uid="uid://beknifsfp3mx0" path="res://UI/UI popups/elements/store_animal_element.gd" id="2_2r2sa"]
[ext_resource type="Texture2D" uid="uid://s78mhwo52ucr" path="res://Animals/icons/alaskan-moose.png" id="3_eejab"]
[ext_resource type="Texture2D" uid="uid://bdlat08gi440a" path="res://UI/Icons/gendericon_female.png" id="4_aerje"]
[ext_resource type="Theme" uid="uid://dyf3vmir01b4a" path="res://UI/Themes/woody/woody_button_green.tres" id="4_gncy4"]

[node name="StoreAnimalElement" type="PanelContainer"]
custom_minimum_size = Vector2(500, 100)
size_flags_horizontal = 3
theme = ExtResource("1_2r2sa")
script = ExtResource("2_2r2sa")

[node name="MainContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="HBoxContainer" type="HBoxContainer" parent="MainContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 110)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6

[node name="AnimalIcon" type="TextureRect" parent="MainContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
texture = ExtResource("3_eejab")
stretch_mode = 5

[node name="AnimalSpecies" type="Label" parent="MainContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Alaskan moose"

[node name="GenderIcon" type="TextureRect" parent="MainContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
texture = ExtResource("4_aerje")
stretch_mode = 5

[node name="BuyButton" type="Button" parent="MainContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("4_gncy4")
theme_override_font_sizes/font_size = 36
text = "$800"
autowrap_mode = 2

[node name="BoughtContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="BoughtContainer"]
layout_mode = 2
text = "Animal bought!"
horizontal_alignment = 1
